<resources>
    <string name="app_name">Moby</string>
    <string name="facebook_app_id">576205213451199</string>
    <string name="fb_login_protocol_scheme">fb576205213451199</string>
    <string name="facebook_client_token">ca4c821f09871ac1e36d3b54f508c08f</string>
    <string name="validate_age">Please enter your age</string>
    <string name="validate_phone">Please enter valid phone number</string>
    <string name="validate_gender">Please select your gender</string>
    <string name="validate_eWallet">Please select your eWallet</string>
    <string name="contact_support">Something went wrong, Please contact to support team.</string>
    <string name="share_message">The New Way To Shop Online…. MOBY CASHBACK, Highest payouts on Over 1000 Brands with Offers Upto 50% + EXTRA (5-30)% Moby Cashback! Use my referral link, Click XXXXXX</string>
    <string name="validate_gps_coordinates">Something went wrong with your GPS connectivity, We are unable to fetch your coordinates..</string>
    <string name="disable_location">LOCATION DISABLE!</string>
    <string name="disable_location_msg">View Store Coupon &amp; Bank Rewards\n in Real Time Near You !\nPlease Allow Location</string>
    <string name="scanned_qr_is_not_correct">Scanned QR code is not correct.</string>
    <string name="action_already_engaged">Already Engaged... :)</string>
    <string name="default_reward_note">TOUCH THE RED PINS NEAR YOU IN THE MALL &amp; ANSWER THE POP UP QUIZ. MUST BE “INSIDE\" THE RELEVANT STORES,\n" +
                        "ELSE YOUR REWARD MONEY WILL BE REVERSE</string>
    <string name="bill_uploaded">You have already uploaded bill for this Ad, Try other brands.</string>
    <string name="upload_bill_restrict">Please use your MOBY COUPON first, before you upload the bill.</string>
    <string name="coupon_expired">Expired</string>
    <string name="empty_offer_list">There is no data found with this search terms\nPlease try with other brands.</string>
    <string name="empty_timeline">Your Timeline is empty!\nEngage with the Brands to earn money.</string>
    <string name="dont_forget_bill_upload">(Cashback in your XXXXXX in ~XX Days)</string>
    <string name="your_cashback_credit">Your Cashback XXX\nCredit After YY days.</string>
    <string name="coupon_valid_for">COUPON VALID FOR XX DAYS.</string>
    <string name="cashback">Cashback</string>
    <string name="title_copy_to_clipboard">CASHBACK ACTIVATED</string>
    <string name="msg_copy_to_clipboard">
        AFTER PAYMENT AT STORE,
        \nTransaction is Tracked &amp; SMS is
        \nsent within 5 Min to Max 24 Hrs
        \nThis SMS confirms the Cashback
        \n\n
        Cash Credit in Your XXXXX
        \nWithin YY days, after the expiry of
        \nproduct Return/Exchange period.
        \n\n
        OUR Cashback, No Code Needed
        \nYou may use Coupon codes given
        \nat site checkout, if not given by us.
    </string>
    <string name="msg_cc_bill_upload_cb">
        AFTER PAYMENT AT STORE,\n
        Register Billing in “MyCoupons”\n
        you will find the same \‘coupon\'\n
        Cashback is then Confirmed &amp;\n
        Tracked in about 24 hrs by SMS\n\n
        Cash Credit in XXXXX
        \nWithin YY days, after the expiry of\n
        product Return/Exchange period.
    </string>
    <string name="mobile_no_mark_used">Mobile No. to Mark as Used</string>
    <string name="btn_mark_coupon_used">Mark Coupon Used</string>
    <string name="ask_store_cashier">Ask Store Cashier</string>
    <string name="coupon_code_conformation_msg">Register your transaction for us\nto credit you</string>
    <string name="validate_transaction_date">Please select your transaction date</string>
    <string name="validate_transaction_amount">Please enter transaction amount</string>
    <string name="camera_access_permission">App needs to access the Camera for capture photo.</string>
    <string name="gallery_access_permission">App needs to access the file storage for pick photo.</string>
    <string name="text_login_title">Login with Mobile Number</string>
    <string name="text_login_msg">We will send you an</string>
    <string name="hint_mobile_no">10 digit mobile number</string>
    <string name="hint_bill_amount">Enter bill amount</string>
    <string name="hint_ask_cashier_for_bill_amt">ASK CASHIER FOR BILL AMT</string>
    <string name="hint_ask_cashier_for_store">ASK CASHIER FOR STORE CODE</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="text_verify_phone_no">Verify Phone Number</string>
    <string name="msg_verify_phone_number">To Edit Your Profile</string>
    <string name="msg_verify_phone_number_refer">To Refer To Your Friends &amp; Family</string>
    <string name="msg_verify_phone_number_map">To View Bank Offers &amp; Physical Store\nOffers In Real Time</string>
    <string name="msg_verify_phone_number_coupon">To Create Your A/c for CashBacks</string>
    <string name="multiple_device_title">Found Multiple Devices</string>
    <string name="multiple_device_msg">Your phone number is connected with multiple devices, so please select any one from them and make sure other device data will be removed permanently.</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Surname</string>
    <string name="hint_email">Email</string>
    <string name="hint_select_gender">Select Gender</string>
    <string name="hint_dob">Date Of Birth</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_upi_address">UPI Address (Make sure this is correct.)</string>
    <string name="hint_paytm_address">Paytm Number (Make sure this is correct.)</string>
    <string name="hint_paytm_number">Paytm Number</string>
    <string name="enter_paytm_number">ENTER PAYTM NUMBER</string>
    <string name="hint_e_wallet">I Want Cashbacks In My</string>
    <string name="hint_bank_account_no">Account Number</string>
    <string name="hint_bank_account_ifsc">IFSC Code</string>
    <string name="add_card_header_tv"><![CDATA[My Credit & Debit Cards]]></string>
    <string name="profile_non_required">No Card Number / No Transactions / No Card CSV / Required, Discover Your Card Offers &amp; Benefits Near You in Real Time.</string>
    <string name="category_offer">Card Offers Categories I want to see</string>
    <string name="bank_offer_with_in">I want to see Bank Card Offer Within</string>
    <string name="payment_transfer_setting">Payment Transfer Setting</string>
    <string name="UPI_alert">Please enter correct UPI ID.</string>
    <string name="account_alert">Please enter correct Account number.</string>
    <string name="ifsc_alert">Please enter correct IFSC code.</string>
    <string name="error_term_condition">Please accept Terms and Condition.</string>
    <string name="all_delete_card_validation">You can\'t delete all cards</string>
    <string name="empty_wallet">Your Wallet is empty!\nEngage with the Brands to earn money.</string>
    <string name="empty_wallet_second_msg">You need to click via our coupons to shop\n
        And then your cashback will reflect here\n\n
        Otherwise just share the app with Friends\n
        and Family. So when they shop.\n
        You Get 15% Exact Everytime!</string>
    <string name="back_from_timeline_title">DON"T LIKE YOUR COUPONS?</string>
    <string name="back_from_timeline_message"><![CDATA[Search for your favorite brands,<br/>Win coupon, & Shop to Get upto<br/>
                  50% off + Extra MOBY Cashback<br/>Over & Above All Other Deals!<br/><br/>
                  Like to Shop Offline? Try Map view<br/>(Need 1 Verified Online Purchase)<br/><br/>Yellow Pins - Real time Card Offers,<br/>Red Pins - All In-Store Coupons<br/>Shown Nearby you, But Pan India!]]></string>
    <string name="bank_offer_title">REAL TIME OFFERS NEAR YOU</string>
    <string name="bank_offer_message">In Store Coupons (Red Pins)\nBank Card Offers (Yellow Pins)\n\nAll Major Cards Are Selected\nYou may edit later in your Profile\nthe Cards &amp; Range to see Offers</string>
    <string name="online_coupon">SELECT\nDEAL</string>
    <string name="instore_coupon">OFFLINE\nCOUPON</string>
    <string name="view_details">SELECT\nOFFER</string>
    <string name="engaged">ENGAGED</string>
    <string name="win_coupon">Win Coupon</string>
    <string name="locate">Locate</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="next_question">Next Question</string>
    <string name="btn_redeem_coupon">Use My\nCoupons</string>
    <string name="btn_get_free_coupon">Win Free\nCoupons</string>
    <string name="view_coupon">View &amp; Shop</string>
    <string name="register_bill">Register Bill</string>
    <string name="btn_shop_in_store">SHOP IN-STORE</string>
    <string name="btn_shop_online">SHOP ONLINE</string>
    <string name="btn_shop_now">Shop Now</string>
    <string name="view_offer">Get Offer</string>
    <string name="btn_upload_now">Register Now</string>
    <string name="btn_upload_later">Later</string>
    <string name="btn_proceed">PROCEED</string>
    <string name="file_chooser">Image Chooser</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="save_profile">Save Profile</string>
    <string name="redeem_coupon">REDEEM COUPONS</string>
    <string name="offline_coupon">OFFLINE STORE OFFERS</string>
    <string name="online_offers">BACK TO ONLINE OFFERS</string>
    <string name="lbl_you_earned">YOUR STATEMENT</string>
    <string name="tv_instant_cash">Cashback</string>
    <string name="tv_virtual_cash">Virtual Cash</string>
    <string name="tv_my_case">My Cash</string>
    <string name="instant_cash">Cash Reward</string>
    <string name="virtual_cash">Virtual Cash</string>
    <string name="cash_back">Cash Back</string>
    <string name="status_pending">Pending</string>
    <string name="status_credited">Credited</string>
    <string name="my_coupon">My Coupons</string>
    <string name="moby_wallet">Moby Wallet</string>
    <string name="message">Message</string>
    <string name="message_details">Message Details</string>
    <string name="ongoing_deals">Ongoing Deals</string>
    <string name="help">Need Help?</string>
    <string name="my_profile">My Profile</string>
    <string name="terms_condition">Moby T &amp; C</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="fab_content_desc">Search</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="referral_percent">I Get %1$s - Rs. %2$s</string>
    <string name="referral_message">%1$s Billed %2$s Cashback Rs. %3$s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="tracked">TRACKED</string>
    <string name="validated">VALIDATED</string>
    <string name="cash_paid">PAID</string>
    <string name="enter_bank_account_number">ENTER Bank Account Number</string>
    <string name="enter_ifsc_code">ENTER IFSC Code</string>
    <string name="enter_upi_id">ENTER UPI ID</string>
    <string name="cashback_upto">Cashback Upto</string>
    <string name="offers">My Offers</string>
    <string name="coupons">My Coupons</string>
    <string name="nearBy">Near By</string>
    <string name="labelHelp">Help</string>
    <string name="mapPopupText">Like to Shop Offline? Try Map View</string>
    <string name="mapPopupTextOne">Real Time Card Offers</string>
    <string name="mapPopupTextTwo">Coupons for Stores Nearby</string>
    <string name="continueLabel">Continue To Shop</string>
    <string name="share_app">Share App</string>
    <string name="shop_now">Shop Now</string>
</resources>