<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_20sdp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/llRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/padding_large"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_large"
                android:gravity="center"
                android:text="@string/back_from_timeline_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/secondary"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:gravity="center"
                android:letterSpacing="0.10"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:text="@string/back_from_timeline_message"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:orientation="vertical">

            <com.rey.material.widget.Button
                android:id="@+id/btnRedeemCoupon"
                style="@style/RippleBtnStandard"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/padding_large"
                android:background="@drawable/bg_white_blue"
                android:text="@string/redeem_coupon"
                android:textColor="@color/secondary" />

            <com.rey.material.widget.Button
                android:id="@+id/btnOfflineOffers"
                style="@style/RippleBtnStandard"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:shadowDy="5.0"
                android:background="@drawable/bg_white_blue"
                android:text="@string/offline_coupon"
                android:textColor="@color/secondary" />

            <TextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/padding_nano"
                android:text="Sorry, You required min. 1 Purchase via\nmoby coupon"
                android:textColor="@color/red"
                android:visibility="gone"
                android:textSize="@dimen/_13sdp" />

            <com.rey.material.widget.Button
                android:id="@+id/btnOnlineOffers"
                style="@style/RippleBtnStandard"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_large"
                android:background="@color/secondary"
                android:text="@string/online_offers" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>