<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mblack"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/file_chooser"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_close_red" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_primary"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/capture_photo"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/btn_primary"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/photo_gallery"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>