<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_12sdp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/llRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNoData"
                style="@style/TvStandard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_18sdp"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_6sdp"
                android:text="@string/empty_wallet_second_msg"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.rey.material.widget.Button
                android:id="@+id/btnShareApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/share_app"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="visible" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <com.rey.material.widget.Button
                android:id="@+id/btnShopNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/shop_now"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>