<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_20sdp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/llRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/back_from_timeline_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/secondary"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:paddingVertical="@dimen/padding_standard">

            <EditText
                android:id="@+id/etBillAmount"
                style="@style/etStandard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_standard"
                android:background="@drawable/bg_white_blue"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:hint="@string/hint_bill_amount"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/txt_large" />

            <LinearLayout
                android:id="@+id/llPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/NormalLayout"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_white_blue"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_standard">

                    <TextView
                        android:id="@+id/tvCountryCode"
                        style="@style/TvStandard"
                        android:background="@null"
                        android:gravity="right"
                        android:text="+91"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/padding_mini"
                        android:layout_marginEnd="@dimen/padding_mini"
                        android:background="@color/colorPrimaryText" />

                    <EditText
                        android:id="@+id/etPhoneNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="@string/hint_mobile_no"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/txt_large" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:orientation="vertical">

            <com.rey.material.widget.Button
                android:id="@+id/btnMarkAsUsed"
                style="@style/RippleBtnStandard"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_standard"
                android:background="@color/black"
                android:text="@string/btn_mark_coupon_used" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>